# socket_using_c

./: README.md
socket_client/: .gitignore  CMakeLists.txt  main.c  send_request.c
socket_client/Core/: client.c  client.h  client_socket.c  client_socket.h
socket_client/Core/Api/: api.c  api.h
socket_client/Core/HtmlParser/: html_parser.c  html_parser.h
socket_client/Core/IO/: incoming_response.c  incoming_response.h  outgoing_request.c  outgoing_request.h
socket_client/Core/Socket/: client.c  client.h  client_socket.c  client_socket.h
socket_client/Core/base64/: base64.c  base64.h
socket_client/interface/: interface.c  interface.h
socket_client/weblog/: life_cycle.c  life_cycle.h
socket_client/weblog/apis/: apis.h  auth_api.c  auth_api.h  post_api.c
socket_client/weblog/interface/: create_post_status.c  delete_post_status.c  get_post_status.c  interface.c  interface.h  main_status.c  main_status.h  post_action_status.c  post_list_status.c  sign_in_status.c  sign_in_status.h  sign_up_status.c  update_post_status.c
socket_client/weblog/models/: models.h  user.c  user.h
socket_server/: .gitignore  CMakeLists.txt  main.c
socket_server/Core/: client.c  client.h  server_socket.c  server_socket.h  socket.c  socket.h
socket_server/Core/IO/: incoming_request.c  incoming_request.h  outgoing_response.c  outgoing_response.h
socket_server/Core/Pipeline/: pipeline.c  pipeline.h
socket_server/Core/Router/: route_template.c  route_template.h  router.c  router.h
socket_server/Core/Socket/: client.c  client.h  server_socket.c  server_socket.h
socket_server/Core/base64/: base64.c  base64.h
socket_server/Core/db/sqlite/: migration.c  migration.h  sqlite3.h
socket_server/callbacks/: callbacks.h  post_callback.c  token_callback.c  user_callback.c
socket_server/controllers/: base_controller.c  base_controller.h  controllers.h  login_controller.c  login_controller.h  post_controller.c  post_controller.h  user_controller.c
socket_server/db/: app.sqlite
socket_server/models/: models.c  models.h  post.c  post.h  token.c  token.h  user.c  user.h
socket_server/routes/: routers.c  routes.c
